# dtact

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: cifuzz.yml  cross_platform.yml  miri.yml  rust.yml  security.yml
benches/: scheduler_efficiency.rs
dtact-macros/: Cargo.toml
dtact-macros/src/: lib.rs
examples/: Makefile  c_async  c_async.c
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
scratch/: size_check.rs
src/: api.rs  c_ffi.rs  common_types.rs  context_switch.rs  dta_scheduler.rs  errors.rs  future_bridge.rs  lib.rs  memory_management.rs  utils.rs
tests/: concurrency.rs  e2e.rs  loom_test.rs  scheduler.rs
