[package]
name = "dtact"
version = "0.1.0"
edition = "2024"

[dependencies]
pastey = "0.2"
futures-io = "0.3"
libc = "0.2"
tokio = { version = "1.50", default-features = false }

[profile.bench]
codegen-units = 1
debug = 1
lto = true
opt-level = 3
strip = true
debug-assertions = false
overflow-checks = false
incremental = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
debug = false
debug-assertions = false
overflow-checks = false
incremental = true

[profile.dev]
lto = false
opt-level = 0
debug = true

[features]
default = []
hw-acceleration = []

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
