[workspace]
members = ["dtact-macros", "fuzz"]

[package]
name = "dtact"
version = "0.1.0"
edition = "2024"

[dependencies]
pastey = "0.2"
libc = "0.2"
dtact-macros = { path = "./dtact-macros", version = "0.1.0" }
windows-sys = { version = "0.61", features = [
    "Win32_System_Diagnostics",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
], optional = true }

[dev-dependencies]
loom = "0.7"
proptest = "1.6"
criterion = { version = "0.8", features = ["async_tokio"] }
tokio = { version = "1", features = ["full"] }

[profile.bench]
codegen-units = 1
debug = 1
lto = true
opt-level = 3
strip = true
debug-assertions = false
overflow-checks = false
incremental = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
debug = false
debug-assertions = false
overflow-checks = false
incremental = true

[profile.dev]
lto = false
opt-level = 0
debug = true

[features]
default = ["windows"]
hw-acceleration = []
hypervisor = []
windows-root = []
windows = ["dep:windows-sys"]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
dtact-macros = { path = "dtact-macros" }

[[bench]]
name = "scheduler_efficiency"
harness = false
